changes to products

--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Acto - HTML 5 Template Preview</title>
+<title>Contact Us</title>
 
 <!-- Stylesheets -->
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
 
 </head>
 
@@ -304,7 +304,8 @@
                     <div class="single-info-box">
                         <div class="icon-box"><i class="flaticon-location"></i></div>
                         <h3>Location</h3>
-                        <div class="text">121 King Street, Melbourne Victoria 3000 Australia</div>
+                        <div class="text">#12628/1A, Street No. Zero, Near Sangeet Cinema, Pratap Chowk, Ludhiana-141003, Punjab
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 info-column">
@@ -312,9 +313,10 @@
                         <div class="icon-box"><i class="flaticon-telephone"></i></div>
                         <h3>Call us on</h3>
                         <div class="text">
-                            <a href="tel:+8801912704287">+88 01912704287</a><br />
-                            <a href="tel:029292162">029292162</a>
-                        </div>
+                            <a href="tel:+919914510883">+91 99145-10883
+                            </a><br />
+                            <a href="tel:+917900000650">+91 79000-00650</a>
+                        </div><br><br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 info-column">
@@ -322,9 +324,10 @@
                         <div class="icon-box"><i class="flaticon-envelope"></i></div>
                         <h3>Location</h3>
                         <div class="text">
-                            <a href="mailto:info@example.com">info@example.com</a>
-                            <a href="mailto:support@example.com">support@example.com</a>
+                            <a href="mailto:janakrajsons@gmail.com">janakrajsons@gmail.com</a>
+                            <a href="mailto:info@janakrajsons.com">info@janakrajsons.com</a>
                         </div>
+                        <br><br>
                     </div>
                 </div>
             </div>
@@ -332,55 +335,10 @@
     </section>
     <!-- contact-info-section end -->
 
-
-    <!-- google-map-section -->
-    <section class="google-map-section">
-        <div class="google-map-area">
-            <div 
-                class="google-map" 
-                id="contact-google-map" 
-                data-map-lat="40.712776" 
-                data-map-lng="-74.005974" 
-                data-icon-path="images/icons/map-marker.png"  
-                data-map-title="Brooklyn, New York, United Kingdom" 
-                data-map-zoom="12" 
-                data-markers='{
-                    "marker-1": [40.712776, -74.005974, "<h4>Branch Office</h4><p>77/99 New York</p>","images/icons/map-marker.png"]
-                }'>
-
-            </div>
-        </div>
-    </section>
-    <!-- google-map-section end -->
-
-
     <!-- contact-section -->
     <section class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 agent-column">
-                    <div class="agent-content">
-                        <h2>Our Agent</h2>
-                        <div class="single-agent-box">
-                            <div class="content-box">
-                                <figure class="agent-image"><img src="images/resource/agent-1.png" alt=""></figure>
-                                <h4>Jasco joan</h4>
-                                <span>Manufacturer agent</span>
-                                <div class="text">Before you hire a factory and start producing your product.</div>
-                                <div class="phone">Phone : <a href="tel:+8801912704287">+88 01912704287</a></div>
-                            </div>
-                        </div>
-                        <div class="single-agent-box">
-                            <div class="content-box">
-                                <figure class="agent-image"><img src="images/resource/agent-2.png" alt=""></figure>
-                                <h4>Mahfuz Riad</h4>
-                                <span>Oil & Gas agent</span>
-                                <div class="text">Before you hire a factory and start producing your product.</div>
-                                <div class="phone">Phone : <a href="tel:+8801912704288">+88 01912704287</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 form-column">
                     <div class="contact-form-area">
                         <h2>Drop us a line</h2>
@@ -406,10 +364,28 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 map-column">
+                    <div class="google-map-area">
+                        <div 
+                            class="google-map" 
+                            id="contact-google-map" 
+                            data-map-lat="40.712776" 
+                            data-map-lng="-74.005974" 
+                            data-icon-path="images/icons/map-marker.png"  
+                            data-map-title="Brooklyn, New York, United Kingdom" 
+                            data-map-zoom="12" 
+                            data-markers='{
+                                "marker-1": [40.712776, -74.005974, "<h4>Branch Office</h4><p>77/99 New York</p>","images/icons/map-marker.png"]
+                            }'>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- contact-section end -->
+
 
     <!-- main-footer -->
     <footer class="main-footer">
