--- a/steel-coils-sheets.html
+++ b/steel-coils-sheets.html
@@ -12,7 +12,7 @@
 <!-- Stylesheets -->
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
 
 </head>
 
@@ -288,14 +288,14 @@
     <!-- shop-banner -->
     <section class="shop-banner">
         <div class="main-slider-carousel owl-carousel owl-theme">
-            <div class="slide" style="background-image:url(images/main-slider/slider-9.jpg)">
+            <div class="slide" style="background-image:url(./images/steel-plates.jpg); background-size: cover; background-position: center;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                             <div class="content-box">
-                                <h1>Center<br />lathe machine</h1>
-                                <div class="text">This Center Lathe Machine supplied by us is highly used for the<br />purpose of producing concentric work. This product is a highly<br />demanded product in the</div>
-                                <!-- <div class="btn-box"><a href="shop-single.html">Add To Cart</a></div> -->
+                                <h1>High-Quality Steel Plates</h1>
+                                <div class="text">Steel coils and sheets are essential components in the construction and manufacturing industries.</div>
+                                <!-- <div class="btn-box"><a href="#">Add To Cart</a></div> -->
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 image-column">
@@ -308,14 +308,14 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" style="background-image:url(images/main-slider/slider-9.jpg)">
+            <div class="slide" style="background-image:url(./images/steel-plates.jpg); background-size: cover; background-position: center;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                             <div class="content-box">
-                                <h1>Center<br />lathe machine</h1>
-                                <div class="text">This Center Lathe Machine supplied by us is highly used for the<br />purpose of producing concentric work. This product is a highly<br />demanded product in the</div>
-                                <!-- <div class="btn-box"><a href="shop-single.html">Add To Cart</a></div> -->
+                                <h1>High-Quality Steel Sheets</h1>
+                                <div class="text">Steel coils and sheets are produced using a variety of processes, including hot and cold rolling.</div>
+                                <!-- <div class="btn-box"><a href="#">Add To Cart</a></div> -->
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 image-column">
@@ -328,14 +328,14 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" style="background-image:url(images/main-slider/slider-9.jpg)">
+            <div class="slide" style="background-image:url(./images/steel-coils.jpg); background-size: cover; background-position: center;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                             <div class="content-box">
-                                <h1>Center<br />lathe machine</h1>
-                                <div class="text">This Center Lathe Machine supplied by us is highly used for the<br />purpose of producing concentric work. This product is a highly<br />demanded product in the</div>
-                                <!-- <div class="btn-box"><a href="shop-single.html">Add To Cart</a></div> -->
+                                <h1>High-Quality Steel Coils</h1>
+                                <div class="text">Steel coils and sheets are an economical choice for many projects because they are available in a wide selection of sizes, thicknesses, and grades.</div>
+                                <!-- <div class="btn-box"><a href="#">Add To Cart</a></div> -->
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 image-column">
@@ -373,19 +373,19 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-1.png" alt=""></figure>
+                                <figure class="image-box"><img src="./images/coils1.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">industrial Motor decanter</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Sheets</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-2.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/sheets4.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">Water jet pumps</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Coils</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -413,19 +413,19 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-1.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/coils.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">industrial Motor decanter</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Sheets</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-2.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/sheets3.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">Water jet pumps</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Coils</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -445,7 +445,7 @@
                     <!-- <div class="top-text">About Us</div> -->
                     <h1>GP COILS & SHEETS</h1>
                     <p>Non-Skin Pass
-                        100/120/180/240/275 GSM
+                        100/120/180/240/275 GSMshop
                         IS277</p><br>
                 </div>
 
@@ -455,19 +455,19 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-1.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/coils2.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">industrial Motor decanter</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Sheets</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-2.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/sheets2.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">Water jet pumps</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Coils</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -498,19 +498,19 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-1.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/coils3.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">industrial Motor decanter</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Sheets</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                             <div class="single-item wow fadeInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="image-box"><img src="images/resource/shop/machine-2.png" alt=""></figure>
+                                <figure class="image-box"><img src="images/sheets1.jpg" alt=""></figure>
                                 <div class="content-box">
-                                    <h3><a href="shop-single.html">Water jet pumps</a></h3>
-                                    <div class="link-btn"><a href="shop-single.html">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
+                                    <h3><a href="#">Best Quality Steel Coils</a></h3>
+                                    <div class="link-btn"><a href="#">Check More<i class="far fa-arrow-alt-circle-right"></i></a></div>
                                 </div>
                             </div>
                         </div>
